# apriltag

apriltag_ros/: CMakeLists.txt  package.xml
apriltag_ros/cfg/: UsbCameraDyn.cfg
apriltag_ros/include/apriltag_ros/: apriltag_estimator.h  pose_estimator.h  usb_camera.h
apriltag_ros/launch/: bag.launch  node.launch  test.launch  usb_camera.launch
apriltag_ros/maps/: big_test_board.yaml
apriltag_ros/msg/: ApriltagArray.msg
apriltag_ros/src/: apriltag_estimator.cpp  apriltag_ros_node.cpp  apriltag_ros_node_old.cpp  camera_node.cpp  pose_estimator.cpp  tag_yaml.cpp  tag_yaml.hpp  usb_camera.cpp
